ui/components/context-bar/flavors/default/index.scss
// Copyright (c) 2015, salesforce.com, inc. All rights reserved.

// Redistribution and use in source and binary forms, with or without modification, are permitted provided that the following conditions are met:
// Redistributions of source code must retain the above copyright notice, this list of conditions and the following disclaimer.
// Redistributions in binary form must reproduce the above copyright notice, this list of conditions and the following disclaimer in the documentation and/or other materials provided with the distribution.
// Neither the name of salesforce.com, inc. nor the names of its contributors may be used to endorse or promote products derived from this software without specific prior written permission.

// THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS" AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT OWNER OR CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.


.#{$css-prefix}context-bar {
  height: $height-context-bar;
  background-color: $color-background-context-bar;
  color: $color-text-context-bar;

  &__primary,
  &__secondary {
    flex: 0 0 auto;
  }

  &__shadow {
    position: absolute;
    top: 100%;
    right: 0;
    left: 0;
    height: rem(3px);
    background: linear-gradient(to bottom, rgba($color-context-bar-shadow, 0.2) 0%, rgba($color-context-bar-shadow, 0) 100%);
  }

  &__vertical-divider {
    width: 0;
    overflow: hidden;
    border-left: $border-width-thin solid $color-border-context-bar-divider;
  }
}

// Mouse/Keyboard interaction
// 1. The whole block is hoverable
// 2. The link is focusable and clickable
// 3. The sub menu trigger is a discrete actionable button
// 4. The sub menu trigger can't be clicked (only actionable via keyboard)
.#{$css-prefix}context-bar-action {
  position: relative; // Needed to absolutely position the trigger

  &.#{$css-prefix}context-bar-action {
    // Overriding the trigger's display value
    // https://github.com/salesforce-ux/design-system-internal/pull/386
    display: flex;
  }

  &__label,
  &__trigger {
    transition: background-color $duration-immediately linear;

    &:hover, // [1]
    &:focus { // [2]
      outline: 0;
      background-color: $color-background-context-bar-highlight;
    }
  }
  &__label {
    padding: {
      left: $spacing-small;
      right: $spacing-small;
    }

    &--expand {
      padding-right: $spacing-large;
    }
  }

  &__trigger { // [3]
    position: absolute;
    right: $spacing-x-small;
    bottom: 0;
    top: 0;
    pointer-events: none; // [4]

    // Color of the arrow
    &,
    &:focus {
      color: $color-text-context-nav-trigger;
    }
  }

  &__trigger-icon {
    fill: currentColor;
    height: 100%; // Force vertical alignment in IE
  }
}

